<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".10"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivWeather"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@drawable/ic_rainy_night"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Guadalupe, Cebu City"
            android:textColor="@color/text_primary"
            android:layout_marginTop="16dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivWeather"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Guadalupe, Cebu City"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/text_primary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/temperature"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="@string/sunrise"
            android:layout_marginTop="32dp"
            android:textStyle="italic"
            android:textColor="@color/text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTemperature"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="@string/sunset"
            android:textStyle="italic"
            android:layout_marginTop="16dp"
            android:textColor="@color/text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSunrise"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingIndicator"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>